Fixed fontawesome bug and added solutions to warmup

--- a/slides/000-intro/warmup.html
+++ b/slides/000-intro/warmup.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2024-04-02">
+<meta name="dcterms.date" content="2024-04-03">
 
 <title>Warm Up</title>
 <style>
@@ -3202,7 +3202,7 @@ window.Quarto = {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">April 2, 2024</p>
+      <p class="date">April 3, 2024</p>
     </div>
   </div>
   
@@ -3261,7 +3261,7 @@ E[X] = \sum_{i} x_i P(x_i)
 </tbody>
 </table>
 <p>What would the expected value <span class="math inline">\(E[A]\)</span> be?</p>
-<div class="answer" style="display: none;">
+<div class="answer" style="display: inherit;">
 <p>The expected value is calculated as follows:</p>
 <p><span class="math inline">\(E[A] = (-4 \cdot 0.20) + (0 \cdot 0.10) + (2 \cdot 0.40) + (4 \cdot 0.30) = 1.2\)</span></p>
 <p>Therefore, the expected value E[A] is 1.2</p>
@@ -3270,7 +3270,7 @@ E[X] = \sum_{i} x_i P(x_i)
 <section id="q02" class="level2">
 <h2 class="anchored" data-anchor-id="q02">Q02</h2>
 <p>Consider the function <span class="math inline">\(g(A) = A^2\)</span>, where <span class="math inline">\(A\)</span> is the same random variable as in <span class="hi">Q01</span>. Compute the expected value of <span class="math inline">\(g(A)\)</span>. Show the work you use to arrive at your answer.</p>
-<div class="answer" style="display: none;">
+<div class="answer" style="display: inherit;">
 <p>To find the expected value of g(A), we follow these steps:</p>
 <ol type="1">
 <li><strong>Calculate g(A) for each value of A:</strong>
