Solutions to warmup 001

--- a/slides/001-review/001-warmup.html
+++ b/slides/001-review/001-warmup.html
@@ -3239,11 +3239,11 @@ window.Quarto = {
 </tbody>
 </table>
 <p><span class="question">Q01.</span> If you pick one student at random, what is the probability that the student received at least a B grade?</p>
-<div class="answer" style="display: none;">
+<div class="answer" style="display: inherit;">
 <p><strong>Probability of at least a B grade:</strong> To get at least a B, the student could have received a B, C, D, or F. Sum the probabilities of these grades: <span class="math inline">\(35\% + 25\% + 15\% + 5\% = 80\%\)</span></p>
 </div>
 <p><span class="question">Q02.</span> What is the probability that a randomly chosen student did not receive an A?</p>
-<div class="answer" style="display: none;">
+<div class="answer" style="display: inherit;">
 <p><strong>Probability of not receiving an A:</strong> This is the opposite (or complement) of getting an A. Since the probabilities must add up to 100%, the probability of not getting an A is <span class="math inline">\(100\% - 20\% = 80\%\)</span></p>
 </div>
 
