--- a/slides/004-ols-ii/040-main.html
+++ b/slides/004-ols-ii/040-main.html
@@ -341,20 +341,29 @@ Andrew Dickinson
 </section>
 <section id="housekeeping" class="slide level2">
 <h2>Housekeeping</h2>
+<div class="columns">
+<div class="column" style="width:50%;">
 <p><span class="hi">PS02:</span></p>
 <ul>
-<li>Due <em>(next)</em> Tuesday at 11:59p</li>
-<li>Covers remaining a bunch of OLS stuff up to today</li>
+<li>Due tonight at 11:59p</li>
+<li><span class="hi">PS03</span> will post today</li>
 </ul>
-<div class="fragment">
-<p><span class="hi">K04</span> &amp; <span class="hi">K05</span></p>
-<ul>
-<li>Due Friday at 5:00p</li>
-</ul>
-</div>
-<div class="fragment">
+</div><div class="column" style="width:50%;">
 <p><span class="hi">Reading:</span> <em>(up to this point)</em></p>
 <p>ItE: R, 1, <span class="hi">2</span></p>
+</div>
+</div>
+<div class="fragment">
+<p><span class="hi">K06</span> &amp; <span class="hi">K06b</span></p>
+<ul>
+<li>Due Friday at 5:00p</li>
+<li>K06: Final <code>dplyr</code> lesson</li>
+<li>K06b: linear models (<code>lm</code>) lesson
+<ul>
+<li>Issue with testing file</li>
+<li>To fix, redownload: “tests/testhat/test-K06b_lm.R”</li>
+</ul></li>
+</ul>
 </div>
 </section>
 <section>
