--- a/warmups/005-warmup.html
+++ b/warmups/005-warmup.html
@@ -6,7 +6,7 @@
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0, user-scalable=yes">
 
-<meta name="dcterms.date" content="2024-04-25">
+<meta name="dcterms.date" content="2024-04-30">
 
 <title>Warm Up</title>
 <style>
@@ -3201,7 +3201,7 @@ window.Quarto = {
     <div>
     <div class="quarto-title-meta-heading">Published</div>
     <div class="quarto-title-meta-contents">
-      <p class="date">April 25, 2024</p>
+      <p class="date">April 30, 2024</p>
     </div>
   </div>
   
@@ -3226,7 +3226,7 @@ window.Quarto = {
 <ol type="a">
 <li><strong>Interpret the Estimates</strong>: Interpret the intercept and slope coefficients in the context of the model.</li>
 </ol>
-<div class="answer" style="display: none;">
+<div class="answer" style="display: inherit;">
 <ol type="a">
 <li>The intercept coefficient (<span class="math inline">\(\beta_0 = 50\)</span>) suggests that a student who sleeps zero hours before an exam is expected to score 50% of the maximum possible score on average. The slope coefficient (<span class="math inline">\(\beta_1 = 5\)</span>) indicates that for each additional hour of sleep, a student’s exam performance is expected to increase by 5% on average.</li>
 </ol>
@@ -3234,7 +3234,7 @@ window.Quarto = {
 <ol start="2" type="a">
 <li><strong>Predicted Outcome</strong>: If a student sleeps for 8 hours, what is the predicted exam performance according to the model?</li>
 </ol>
-<div class="answer" style="display: none;">
+<div class="answer" style="display: inherit;">
 <ol start="2" type="a">
 <li>Using the model, if a student sleeps for 8 hours, the predicted exam performance is <span class="math inline">\(50 + 5 \times 8 = 90%\)</span> of the maximum possible score.</li>
 </ol>
@@ -3242,10 +3242,50 @@ window.Quarto = {
 <ol start="3" type="a">
 <li><strong>Effect of Changing X</strong>: Suppose a student is considering adjusting their sleeping habits. They currently sleep 6 hours and are thinking of sleeping 8 hours instead. What would the model predict the change in their exam performance to be? In other words, what is the expected increase in exam performance if they sleep for 2 more hours?</li>
 </ol>
-<div class="answer" style="display: none;">
+<div class="answer" style="display: inherit;">
 <ol start="3" type="a">
 <li>If a student increases their sleep from 6 to 8 hours, the model predicts an increase in exam performance by <span class="math inline">\(5 \times 2 = 10%\)</span>. This means that by sleeping 2 more hours, their performance could increase from 80% to 90% of the maximum possible score.</li>
 </ol>
+</div>
+<ol start="4" type="a">
+<li><strong>Two-Sided Hypothesis Test</strong>: Test the hypothesis that additional hours of sleep have no effect on exam performance against the alternative that they do have an effect. Use a significance level of 0.05. The critical t-value for with appropriate degrees of freedom is approximately 1.96 for a two-tailed test.</li>
+</ol>
+<div class="answer" style="display: inherit;">
+<ol start="4" type="a">
+<li>For the two-sided hypothesis test <span class="math inline">\(H_0: \beta_1 = 0\)</span> against <span class="math inline">\(H_1: \beta_1 \neq 0\)</span>, calculate the t-statistic:</li>
+</ol>
+<p><span class="math display">\[
+t = \frac{\beta_1 - 0}{\text{SE}_{\beta_1}} = \frac{5 - 0}{1.5} \approx 3.33
+\]</span></p>
+<p>The critical t-value for <span class="math inline">\(\alpha = 0.05\)</span> with appropriate degrees of freedom is approximately 1.96 for a two-tailed test. Since the absolute value of the calculated t-statistic exceeds the critical value, we reject the null hypothesis, indicating that additional hours of sleep significantly affect exam performance.</p>
+</div>
+<ol start="5" type="a">
+<li><strong>One-Sided Hypothesis Test with Minimum Effect Size</strong>: Test the hypothesis that additional hours of sleep increase exam performance by no more than 3% per hour against the alternative that each additional hour of sleep increases exam performance by more than 3%. Use a significance level of 0.05. The critical value for a significance level of 0.05 with appropriate degrees of freedom is approximately 1.645.</li>
+</ol>
+<div class="answer" style="display: inherit;">
+<ol start="5" type="a">
+<li>For this one-sided hypothesis test, we use the null hypothesis <span class="math inline">\(H_0: \beta_1 \leq 3\)</span> against the alternative hypothesis <span class="math inline">\(H_1: \beta_1 &gt; 3\)</span>. The test statistic is calculated as follows:</li>
+</ol>
+<p><span class="math display">\[
+t = \frac{\beta_1 - 3}{\text{SE}_{\beta_1}} = \frac{5 - 3}{1.5} \approx 1.33
+\]</span></p>
+<p>Since the calculated t-statistic is less than the critical value, we fail to reject the null hypothesis, indicating that we do not have sufficient evidence to conclude that each additional hour of sleep increases exam performance by more than 3%.</p>
+</div>
+<ol start="6" type="a">
+<li><strong>Confidence Intervals</strong>: Calculate the 95% confidence interval for <span class="math inline">\(\beta_1\)</span>. Does your confidence interval satisfy the hypothesis test from part d?</li>
+</ol>
+<div class="answer" style="display: inherit;">
+<ol start="6" type="a">
+<li>To calculate the 95% confidence interval for <span class="math inline">\(\beta_1\)</span>, we use the formula:</li>
+</ol>
+<p><span class="math display">\[
+\text{CI} = \beta_1 \pm z^* \times \text{SE}_{\beta_1}
+\]</span></p>
+<p>Where <span class="math inline">\(\beta_1 = 5\)</span>, <span class="math inline">\(\text{SE}_{\beta_1} = 1.5\)</span>, and <span class="math inline">\(z^*\)</span> (the critical value for a 95% confidence level) is approximately 1.96. This results in:</p>
+<p><span class="math display">\[
+\text{CI} = 5 \pm 1.96 \times 1.5 = (5 \pm 2.94) = (2.06, 7.94)
+\]</span></p>
+<p>The 95% confidence interval for <span class="math inline">\(\beta_1\)</span> is (2.06, 7.94). This interval includes values greater than zero but also less than the 3% increase considered in part e. Therefore, this confidence interval supports the conclusion of part d, indicating that there is significant evidence at the 5% level that additional hours of sleep have a positive effect on exam performance, though it does not conclusively support the more specific alternative hypothesis that the effect is greater than 3% per hour.</p>
 </div>
 </section>
 
